--- a/DemoFinal/src/main/resources/application.properties
+++ b/DemoFinal/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=DemoFinal
+
+#Esto es la conexion a sql
+spring.datasource.url=jdbc:mysql://localhost/crudrapido
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.jpa.show-sql:true
